fix: add spacing between search bar and nav links

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -49,6 +49,7 @@ h1, h2, h3, h4, h5, h6,
 .VPNavBarSearch.search {
   flex-grow: 0 !important;
   padding-left: 16px;
+  padding-right: 16px;
 }
 
 /* Brand button color */
